--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,29 @@
-version: '2'
+
 services:
-  php:
-    image: yiisoftware/yii2-php:7.4-apache
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: yii_app
     volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+      - .:/var/www/html
     ports:
-      - '8000:80'
+      - "8080:80"
+    working_dir: /var/www/html
+    depends_on:
+      - db
+
+  db:
+    image: mysql:5.7
+    container_name: yii_db
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
